# Video_RAG_Model

./: .gitignore  .huggingface.yml  ETL.py  LLM.py  README.md  app.ipynb  app.py  docker-compose.yml  main.py  populateQdrant.py  pyproject.toml  saved_chunks.txt
.gradio/flagged/: dataset1.csv
assets/: chunks.txt  chunks_new.txt  eFgkZKhNUdM.txt
assets/chunk_timestamps/: chunks_1_timestamped.txt  chunks_2_timestamped.txt  chunks_3_timestamped.txt  chunks_4_timestamped.txt  chunks_5_timestamped.txt  chunks_6_timestamped.txt  chunks_7_timestamped.txt  chunks_8_timestamped.txt
assets/chunks/: chunks_1.txt  chunks_2.txt  chunks_3.txt  chunks_4.txt  chunks_5.txt  chunks_6.txt  chunks_7.txt  chunks_8.txt
assets/embeddings/: embeddings.npy
assets/timestamps/: TV-DjM8242s.txt  WXoOohWU28Y.txt
assets/transcripts/: FCQ-rih6cHY.txt  TV-DjM8242s.txt  WXoOohWU28Y.txt  rCVlIVKqqGE.txt
dataPipeline/: __init__.py  augmentSegments.py  createSegment.py  extractName.py  getText.py  getVttPaths.py  mongoFunctions.py  populateMongo.py  retrieveTranscripts.py  segmentText.py  writeText.py
dataPipeline/data/: eQ6UE968Xe4_llama-3.3.txt  timestamped_segments_example.txt
dataPipeline/testing/: chat_output.txt  cleaned_timestamps.txt  test.ipynb  (+2 more)
featurizationPipeline/: __init__.py  __innit__.py  chunking.py  embedding.py  populateQdrant.py  timestamps.py  upload.py
llmEngineering/: __innit__.py  dummyEmbed.py  enhance.py  enhanceQuery.py  getQuery.py  search.py  searchQdrant.py  test.py
tests/: test.py  test_embedding.py  testing_embedding.py  testing_overlap.py
(+39 files in other folders)
