[tool.poetry]
name = "video-rag-model"
version = "0.1.0"
description = "Final project for CS370 to create a video RAG model"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.4.0"
ipykernel = "^6.29.5"
openai = "^1.76.0"
dotenv = "^0.9.9"
pymongo = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
